--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.15",
+    "@microsoft/signalr": "^8.0.7",
     "express": "^4.18.2",
     "ngx-cookie-service": "^19.1.2",
     "ngx-toastr": "^19.0.0",
